# jarvis

./: .air.toml  .bumpversion.cfg  .dockerignore  .gitignore  .travis.yml  Caddyfile  Dockerfile  Makefile  README.md  build.sh  docker-compose.yaml  docker-compose.yml  go.mod  go.sum  main.go  main.py  makefile  mix.exs  note.txt  pyproject.toml  requirements-dev.txt  requirements.txt  startPostgres.sh  start_db.sh  tailwind.config.js
.github/: elixir.yml
.github/workflows/: elixir.yml  fe.yaml  rust.yml
.test_env/: docker-compose.yaml  redis.conf
__ops__/dev/: _env.sh  docker-compose.yml
assets/: package-lock.json  package.json  webpack.config.js
assets/css/: app.css  menu.css  phoenix.custom.css
assets/js/: app.js  elm.js  socket.js
assets/src/: Artwork.elm  Isle.elm  Main.elm
assets/static/: htmx.min.js  manifest.json
cmd/jarvis/: main.go
config/: config.exs  dev.exs  github.exs  prod.exs  prod.secret.exs.template  releases.exs  test.exs
internal/migrations/: migrations.go
internal/routes/: routes.go
internal/store/: store.go
internal/views/: views.go
jarvis-backend/: .gitignore  Cargo.toml  README.md  api.http  pom.xml
jarvis-backend-2/: .air.toml  .gitignore  Dockerfile  Taskfile.yaml  go.mod  go.sum  package-lock.json  reqirements.in  requirements.txt  setup.go
jarvis-backend-2/app/: api.go  app.go  app_test.go  meals.go  meals_test.go  routes.go
jarvis-backend-2/auth/: auth.go
jarvis-backend-2/cmd/: main.go
jarvis-backend-2/datastore/: constants.go  datastore_test.go  meals.sql.go  models.go
jarvis-backend-2/dto/: dto.go
jarvis-backend-2/jarvis/: manage.py
jarvis-backend-2/middleware/: auth_check.go  rewrite_url.go
jarvis-backend-2/queries/: meals.sql
jarvis-backend-2/schema/: 20240704194023_init_meals.sql  Taskfile.yaml  schema.go
jarvis-backend-2/templ/: index.templ  index_templ.go
jarvis-backend-2/templates/: app.templ  app_templ.go  meals.templ  meals_templ.go
jarvis-backend/configuration/: configuration.yaml
jarvis-backend/src/: api_v1.rs  cli.rs  configuration.rs  dto.rs  error.rs  main.rs  model.rs  security.rs  security_a.rs  server.rs  service.rs  storage.rs
jarvis-backend/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
jarvis-backend/src/main/java/org/corka/jarvisbackend/: JarvisBackendApplication.java
jarvis-backend/src/main/java/org/corka/jarvisbackend/json/: Credentials.java  Product.java  ShoppingList.java  ShoppingListResource.java
jarvis-backend/src/test/java/org/corka/jarvisbackend/: JarvisBackendApplicationTests.java
jarvis-cli/: .gitignore  LICENSE  README.md  go.mod  go.sum  main.go
jarvis-cli/cmd/: add_orga.go  add_user.go  delete_orga.go  delete_user.go  orga.go  passwd_user.go  root.go  show_orga.go  show_user.go  update_orga.go  update_user.go  user.go
jarvis-cli/config/: config.go
jarvis-cli/db/: db.go
jarvis-cli/util/: util.go
jarvis-fe/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  tsconfig.json
jarvis-fe/src/: index.html  jarvis-theme.css  main.ts  manifest.webmanifest  styles.css
lib/: jarvis_web.ex  release_tasks.ex
lib/jarvis/: accounts.ex  animal_xing.ex  application.ex  application_services.ex  domain_services.ex  finances.ex  inventory.ex  release.ex  sensors.ex  shopping.ex  shopping_lists.ex
lib/jarvis_web/: endpoint.ex  gettext.ex  router.ex
migrations/: 000001_create_list_table.up.sql
priv/cert/: selfsigned.pem  selfsigned_key.pem
priv/gettext/: accounts.pot  animalxing.pot  default.pot  errors.pot  inventory.pot  shoppinglists.pot
rel/: config.exs
scripts/: create_user.exs
src/: Makefile  manage.py  pytest.ini
test/: devices.http  measurements.http
test_env/: docker-compose.yaml
views/: _components.gohtml  _footer.gohtml  _header.gohtml  _menu.gohtml  _menu.html  _root.gohtml  index.gohtml  index.html  lists.gohtml  lists_details.gohtml  login.gohtml  menu.gohtml  menu.html
(+430 files in other folders)
