[package]
name = "jarvis-backend"
version = "5.0.15"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
futures-util = "0.3"
mongodb = { version = "2.3.0", features = ["bson-chrono-0_4"] }
futures = "0.3.24"
log = "0.4"
env_logger = "0.9"
chrono = { version = "0.4.22", features = ["serde"] }
bcrypt = "0.13"
validator = { version = "0.16.0", features = ["derive"] }
axum = "0.6.11"
anyhow = "1.0.69"
thiserror = "1.0.40"
axum-sessions = "0.5.0"
tower-http = { version = "0.4.0", features = ["fs"]}
tokio = { version = "1.27.0", features = ["full"] }

[dependencies.clap]
version = "4.0.32"
features = ["derive"]

[dependencies.config]
version = "0.13.1"
features = ["yaml"]

[dependencies.uuid]
version = "1.1.2"
features = [
    # Lets you generate random UUIDs
    "v4",
    # Use a faster (but still sufficiently random) RNG
    "fast-rng",
    # Enable better diagnostics for compile-time UUIDs
    "macro-diagnostics",
]
